# AiTest

./: .gitignore  CMakeLists.txt  README.md
include/: Random.hpp  ball.h  network.h
src/: ball.cpp  main.cpp  network.cpp
